# app/Http/Controllers/Controller.php
@@ -40,15 +40,18 @@ use Illuminate\Routing\Controller as BaseController;
  * @OA\Schema(
  *  schema="User",
  *  title="User",
- *      @OA\Property(property="id", type="string", example="45c746aa-64e1-349c-8a94-9daf95d36c52"),
+ *      @OA\Property(property="id", type="string", example="0d2301a8-f20e-32eb-87f4-3630d5999c0b"),
  *      @OA\Property(property="default_bill_id", type="string", example=1),
  *      @OA\Property(property="last_name", type="string", example="Haley"),
  *      @OA\Property(property="first_name", type="string", example="Carolyn"),
  *      @OA\Property(property="middle_name", type="string", example="Berta"),
  *      @OA\Property(property="status", type="string", example="active"),
+ *      @OA\Property(property="passport_series", type="string", example="21 52"),
+ *      @OA\Property(property="passport_number", type="string", example="026907"),
+ *      @OA\Property(property="phone", type="integer", example="7525301782"),
  *      @OA\Property(property="created_at", type="string", example="2024-05-17T13:22:34.000000Z"),
  *      @OA\Property(property="updated_at", type="string", example="2024-05-17T13:22:34.000000Z"),
- *      @OA\Property(property="deleted_at", type="string", example=null),
+ *      @OA\Property(property="deleted_at", type="string", example="2025-05-17T13:20:14.000000Z"),
  * ),
  * @OA\Schema(
  *  schema="Car",
