# app/Http/Requests/Arendators/StoreRequest.php
@@ -22,10 +22,18 @@ class StoreRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'prod' => 'required|string',
-            'mark' => 'required|string',
-            'model' => 'required|string',
-            'year' => 'required|integer'
+            'id' => 'string',
+            'default_bill_id' => 'required|string',
+            'last_name' => 'required|string',
+            'first_name' => 'required|string',
+            'middle_name' => 'required|string',
+            'status' => 'required|string',
+            'passport_series' => 'required|string',
+            'passport_number' => 'required|string',
+            'phone' => 'required|integer',
+            'created_at' => 'string',
+            'updated_at' => 'string',
+            'deleted_at' => 'string',
         ];
     }
 }
